# stt-ukrainian-api

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
app/: __main__.py
test/: test_api.ps1  test_api.sh  test_transcription.py
